--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,6 @@ pyautogui
 # --- V1.1: Memory System (NEW) ---
 chromadb==0.5.23
 sentence-transformers==3.3.1
+
+# --- V1.2 Voice Recognization ---
+resemblyzer
