--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
         "model_name": "llama3",
         "temperature": 0.3,
         "max_history": 10,
-        "streaming": true,
+        "streaming": false,
         "auto_model": true,
         "model_tiers": {
             "high": "llama3",
@@ -65,5 +65,12 @@
         "default_alarm_message": "Time to wake up.",
         "default_reminder_time": "09:00",
         "fire_through_pause": true
+    },
+    "knowledge": {
+        "enabled": true,
+        "sources_dir": "seven_data/knowledge",
+        "chunk_size": 500,
+        "top_k": 3,
+        "auto_index": true
     }
 }
